--- a/style.css
+++ b/style.css
@@ -41,4 +41,40 @@ body {
     font-weight: bold;
     display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+.correct {
+    background-color: darkgreen;
+    color: white;
+}
+
+.wrong {
+    background-color: #888;
+    color: white;
+}
+
+.close {
+    background-color: goldenrod;
+    color: white;
+}
+
+.invalid {
+    animation: flash 1s;
+}
+
+/* flashes red border and then fades back to gray */
+@keyframes flash {
+    5% {
+        border-color: crimson;
+    }
+
+    100% {
+        border-color: #ccc;
+    }
+}
+
+.spiral {
+    font-size: 40px;
+    animation: spin 1.5s linear infinite;
 }
