--- a/style.css
+++ b/style.css
@@ -78,3 +78,67 @@ body {
     font-size: 40px;
     animation: spin 1.5s linear infinite;
 }
+
+/* rotates clockwise indefinitely */
+@keyframes spin{
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* visibility hidden means the item is still there and taking up space
+   but just not shown. display: none doesn't take up space */
+.hidden {
+    visibility: hidden;
+}
+
+.info-bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* winner animation */
+@keyframes rainbow{
+    100%,
+    0% {
+      color: rgb(255, 0, 0);
+    }
+    8% {
+      color: rgb(255, 127, 0);
+    }
+    16% {
+      color: rgb(255, 255, 0);
+    }
+    25% {
+      color: rgb(127, 255, 0);
+    }
+    33% {
+      color: rgb(0, 255, 0);
+    }
+    41% {
+      color: rgb(0, 255, 127);
+    }
+    50% {
+      color: rgb(0, 255, 255);
+    }
+    58% {
+      color: rgb(0, 127, 255);
+    }
+    66% {
+      color: rgb(0, 0, 255);
+    }
+    75% {
+      color: rgb(127, 0, 255);
+    }
+    83% {
+      color: rgb(255, 0, 255);
+    }
+    91% {
+      color: rgb(255, 0, 127);
+    }
+}
+  
+.winner {
+    animation: rainbow 4s infinite linear;
+}
